# LinearCodes

./: CMakeLists.txt  Makefile
include/: cli.h  code.h  controller.h  decoder.h  encoder.h  factory.h  hamming_decoder.h  hamming_encoder.h  statistics.h  ui.h  utils.h
src/: cli.cpp  code.cpp  controller.cpp  controller.h  cyclic_decoder.cpp  cyclic_encoder.cpp  factory.cpp  factory.h  hamming_decoder.cpp  hamming_encoder.cpp  main.cpp  statistics.cpp  utils.cpp  utils.h
src/code/: binary_code.cpp  binary_code.h  code.cpp  code.h  cyclic_code.cpp  cyclic_code.h  hamming_code.cpp  hamming_code.h
src/decoders/: cyclic_decoder.cpp  cyclic_decoder.h  decoder.h  hamming_decoder.cpp  hamming_decoder.h
src/encoders/: cyclic_encoder.cpp  cyclic_encoder.h  encoder.h  hamming_encoder.cpp  hamming_encoder.h
src/ui/: cli.cpp  cli.h  ui.h
